# wstest

./: .gitmodules  wstest.code-workspace
client/: .gitignore  .metadata  README.md  pubspec.yaml
client/lib/: main.dart
client/test/: widget_test.dart
server/: CMakeLists.txt  CMakePresets.json  asio.cmake  vcpkg.json
server/cmake/: asio.cmake  flatbuffers.cmake
server/src/: main.cc  protocol.fbs
